objects/SFDC_MDF_Claim__c.object
<CustomObject>
    <description>A set of claims tied to a specific grant request.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(Account__r.Name!=NULL, Account__r.Name, &apos;Redcross&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account that made the claim request. Typically updated via a scontrol or APEX code rather than having the partner select their own account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000002DjDKEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <description>The number of elapsed days since the claim was created</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the current claim</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>The date the fund claim was approved. This should be updated through a workflow approval process.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger budget recalculate workflow</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Program_area__c</fullName>
        <formula>Text(Budget__r.Program_Area__c)</formula>
        <label>Program Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally assign the fund claim to a budget. This budget is typically the same budget as the fund request is assigned to</description>
        <label>Budget</label>
        <referenceTo>SFDC_Budget__c</referenceTo>
        <relationshipName>R00N30000002DjDZEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Transaction to apply to customer account</description>
        <label>Credit Memo</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Grant Claims</relationshipLabel>
        <relationshipName>Grant_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Stored_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stored Payment for use during Order Entry</description>
        <label>CC Stored Payment</label>
        <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
        <relationshipLabel>Grant Claims</relationshipLabel>
        <relationshipName>Grant_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Details__c</fullName>
        <description>High level information about the fund claim</description>
        <label>Claim Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <description>A unique id assigned to the fund claim. Optionally useful for the partner as a means to identify the specific fund claim record.</description>
        <displayFormat>{YY}{MM}{DD}-{0}</displayFormat>
        <label>Claim ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Claim_Paid_Date__c</fullName>
        <description>Claim paid date</description>
        <label>Claim Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Learning_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.redwing__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <description>A list of available activity/ expenditure types. Customize as needed</description>
        <label>Expenditure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Course Fees</fullName>
                </value>
                <value>
                    <fullName>Books and Expenses</fullName>
                </value>
                <value>
                    <fullName>Travel Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Note: This cannot be a master detail relationship if you plan to use approval workflow as the fund request will be locked (during approval and most likely post approval) and therefore any child claims cannot be saved</description>
        <label>Fund Request</label>
        <referenceTo>SFDC_MDF__c</referenceTo>
        <relationshipName>R00N30000002DjDcEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ILT_Location_Name__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.redwing__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILT Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Mailing_City__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Location_Mailing_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.redwing__Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Location_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_zip_code__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Site_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location zip code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Expenditure_Type__c</fullName>
        <description>Used when the user chooses &apos;other&apos; as the expenditure type</description>
        <label>Other Expenditure Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paid_Check_Number__c</fullName>
        <description>Check number used to pay claim.</description>
        <label>Paid Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that owns the partner account. Should be updated/ set automatically by an APEX trigger or scontrol rather than entered by the user</description>
        <label>Partner Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002DjDeEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>How the claim payment was paid/ processed</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                    <default>true</default>
                    <label>Credit Memo</label>
                </value>
                <value>
                    <fullName>Revoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by the partner or the vendor (depending on the field level security and implementation specifics) to indicate that the claim has supporting documentation</description>
        <label>Performance Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proof of performance verified by the vendor.</description>
        <label>Performance Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.redwing__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The fund claim approval status. This should be updated through an approval process rather than changing through the user interface</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Revoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Grant Claim</label>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Amount_Limits</fullName>
        <active>true</active>
        <description>The amount must be greater than zero</description>
        <errorConditionFormula>AND(
   Amount__c &lt;= 0,
   NOT 
     (ISPICKVAL( Payment_Method__c , &quot;Revoke&quot;)
      ),
      NOT (ISPICKVAL(  Status__c  , &quot;Paid&quot;)
      )
    )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>The claim amount must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Other_Expenditure_Type</fullName>
        <active>true</active>
        <description>Used to force the user to choose fill in the &apos;other expenditure type&apos; when &apos;other&apos; is chosen as the expenditure type</description>
        <errorConditionFormula>AND(ISPICKVAL( Expenditure_Type__c, &quot;Other&quot;), LEN(Other_Expenditure_Type__c )=0)</errorConditionFormula>
        <errorDisplayField>Other_Expenditure_Type__c</errorDisplayField>
        <errorMessage>Please provide details on the &apos;Other&apos; expenditure type.</errorMessage>
    </validationRules>
</CustomObject>